fixed compile warnings